# Hermes4ArXiv

./: .coverage  .env.env.backup  .gitignore  .pre-commit-config.yaml  ADVANCED_CONFIG.md  CHANGELOG.md  CLAUDE.md  CLEANUP_v2.1_SUMMARY.md  DEPLOY_FOR_USERS.md  DEVELOPMENT_PLAN.md  Dockerfile  EXTENSION_ROADMAP.md  GMAIL_SETUP_GUIDE.md  LICENSE  Makefile  NEW_REPOSITORY_SETUP_GUIDE.md  PROJECT_REBUILD_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_START.md  QUICK_START_EXTENSIONS.md  QUICK_START_SUMMARY.md  README.md  REPOSITORY_REBUILD_COMPLETE.md  SECRETS_SETUP_GUIDE.md  SECURITY.md  SUMMARY.md  TESTING_GUIDE.md  TODO_OPTIMIZATION.md  WORKFLOW_SETUP_GUIDE.md  analysis_output.md  config.yml  coverage.xml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: daily_paper_analysis.yml  daily_paper_analysis_enhanced.yml  daily_paper_analysis_optimized.yml  setup-template.yml  test.yml
.github/workflows_backup/: quality.yml
docs/: CUSTOM_MODELS_GUIDE.md  DEPLOYMENT_GUIDE.md  PROJECT_REFACTOR_SUMMARY.md  README.md  uv_integration.md
docs/development/: CACHE_ISSUES_GUIDE.md  CACHE_ISSUE_SOLUTION_SUMMARY.md  PARALLEL_OPTIMIZATION_GUIDE.md  PARALLEL_OPTIMIZATION_SUMMARY.md  TESTING_GUIDE.md
docs/extensions/: EXTENSIONS_SUMMARY.md
docs/project/: DOCUMENTATION_ORGANIZATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md
docs/setup/: DEEPSEEK_SETUP_GUIDE.md  DEPLOY_FOR_USERS.md  MULTI_AI_GUIDE.md  PROJECT_RESTRUCTURE_PLAN.md  QWEN_SETUP_GUIDE.md  SECURITY.md  SOTA_MODELS_GUIDE.md  TEMPLATE_PREVIEW_GUIDE.md
scripts/: analyze_papers.py  benchmark.py  benchmark_parallel.py  cleanup_workflows.py  configure_analysis.py  diagnose_cache_issues.py  fix_env_encoding.py  organize_docs.py  project_status.py  quick_start.py  rebuild_repository.py  setup_multi_ai.py  test_failure_handling.py  test_workflows.py  validate_env.py  validate_env_local.py
src/: ai_analyzer.py  ai_analyzer_adapter.py  ai_prompts.py  config.py  email_sender.py  main.py  multi_ai_analyzer.py  output_formatter.py  parallel_analyzer.py  preview_template.py  test_components.py  test_multi_ai.py
src/ai/: __init__.py  adapter.py  analyzer.py  batch_coordinator.py  gemini_fix.py  multi_analyzer.py  parallel.py  prompts.py
src/ai/analyzers/: legacy.py
src/data/: arxiv_client.py
src/output/: email_sender.py  formatter.py
src/output/templates/: email_template.html
src/preview/: server.py  template_preview.py
src/storage/: conclusion.md
src/templates/: email_template.html
src/tests/: test_ai_analyzers.py  test_components.py  test_quality_filter.py  test_single_model.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_arxiv_client.py  test_config.py
